// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testVueFile compatible 1`] = `
"import MyComponent from 'my-component.vue'
import {
  computed,
  reactive,
  toRefs,
  ref,
  provide,
  inject,
  onBeforeUnmount,
  onUnmounted,
  defineComponent
} from '@vue/composition-api'

const symbol = Symbol('baz')

/**
 * My basic tag
 */
export default defineComponent({
  model: {
    prop: 'checked',
    event: 'change'
  },
  props: {
    bar: null,
    qaq: null,
    cac: null,
    checked: { type: Boolean },
    /**
     * My foo
     */
    foo: { type: Boolean, default: false }
  },
  name: 'oao',
  setup(props, context) {
    /**
     * My count
     */
    const count = computed(() => {
      return /* TODO: Check this convert result, it can work well in 80% case.*/ context
        .root.$store.state.count
    })

    const { a } = (() => {
      const a = 'pa'

      return toRefs(
        reactive({
          a: a
        })
      )
    })()

    const anotherComponent = ref<HTMLElement>(null)

    provide('foa', 'foo')
    provide('bar', 'bar')

    const foai = inject<string>('foai')

    const bari = inject<string>('bar')

    const optional = inject<string>('optional', 'default')

    const bazi = inject<string>(symbol)

    /* TODO: Check for potential naming collisions from $refs conversion*/ const myDiv = ref<
      HTMLDivElement
    >(null)

    /* TODO: Check for potential naming collisions from $refs conversion*/ const mySpan = ref(
      null
    )

    /* TODO: Check for potential naming collisions from $refs conversion*/ const myComponent = ref<
      MyComponent
    >(null)

    /**
     * My msg
     */
    const msg = ref('Vetur means \\"Winter\\" in icelandic.') //foo

    onBeforeUnmount(() => {
      context.emit('Tearing down')
    })
    onUnmounted(() => {
      console.log('destroyed')
    })

    const refAccess = () => {
      const foo = { myDiv: true }

      foo.myDiv = false // should not transform
      myDiv.value!.focus()
      mySpan.value!.innerText = 'foo'
      myComponent.value!.vm.doSomething()
    }

    /**
     * My greeting
     */
    const hello = () => {
      console.log(msg.value)
    }

    // TODO: Please remove unused return variable
    return {
      count,
      a,
      anotherComponent,
      foai,
      bari,
      optional,
      bazi,
      myDiv,
      mySpan,
      myComponent,
      msg,
      onBeforeUnmount,
      onUnmounted,
      refAccess,
      hello
    }
  }
})
"
`;

exports[`testVueFile no compatible 1`] = `
"import MyComponent from 'my-component.vue'
import {
  computed,
  reactive,
  toRefs,
  ref,
  provide,
  inject,
  onBeforeUnmount,
  onUnmounted
} from 'vue'

const symbol = Symbol('baz')

/**
 * My basic tag
 */
export default {
  model: {
    prop: 'checked',
    event: 'change'
  },
  props: {
    bar: null,
    qaq: null,
    cac: null,
    checked: { type: Boolean },
    /**
     * My foo
     */
    foo: { type: Boolean, default: false }
  },
  name: 'oao',
  setup(props, context) {
    /**
     * My count
     */
    const count = computed(() => {
      return /* TODO: Check this convert result, it can work well in 80% case.*/ context
        .root.$store.state.count
    })

    const { a } = (() => {
      const a = 'pa'

      return toRefs(
        reactive({
          a: a
        })
      )
    })()

    const anotherComponent = ref<HTMLElement>(null)

    provide('foa', 'foo')
    provide('bar', 'bar')

    const foai = inject<string>('foai')

    const bari = inject<string>('bar')

    const optional = inject<string>('optional', 'default')

    const bazi = inject<string>(symbol)

    /* TODO: Check for potential naming collisions from $refs conversion*/ const myDiv = ref<
      HTMLDivElement
    >(null)

    /* TODO: Check for potential naming collisions from $refs conversion*/ const mySpan = ref(
      null
    )

    /* TODO: Check for potential naming collisions from $refs conversion*/ const myComponent = ref<
      MyComponent
    >(null)

    /**
     * My msg
     */
    const msg = ref('Vetur means \\"Winter\\" in icelandic.') //foo

    onBeforeUnmount(() => {
      context.emit('Tearing down')
    })
    onUnmounted(() => {
      console.log('destroyed')
    })

    const refAccess = () => {
      const foo = { myDiv: true }

      foo.myDiv = false // should not transform
      myDiv.value!.focus()
      mySpan.value!.innerText = 'foo'
      myComponent.value!.vm.doSomething()
    }

    /**
     * My greeting
     */
    const hello = () => {
      console.log(msg.value)
    }

    // TODO: Please remove unused return variable
    return {
      count,
      a,
      anotherComponent,
      foai,
      bari,
      optional,
      bazi,
      myDiv,
      mySpan,
      myComponent,
      msg,
      onBeforeUnmount,
      onUnmounted,
      refAccess,
      hello
    }
  }
}
"
`;
